--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "mohammad usman",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "mongoose": "^8.2.0"
   }
 }
