--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "mohammad usman",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
